--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
 .social-network-layout {
   display: flex;
   flex-direction: row;
-  background: #000;
+  background: #0f0c0a;
   padding: 30px;
 }
 
@@ -26,7 +26,7 @@ body {
 }
 
 .control-panel {
-  background: #000;
+  background: #0f0c0a;
   display: flex !important;
   /* margin-top: 20px; */
   flex-direction: column;
@@ -40,7 +40,7 @@ body {
   flex-direction: column;
   gap: 15px;
 }
-
+/* 
 .retro-btn {
   background: #222;
   border: 2px solid #0f0;
@@ -71,8 +71,8 @@ body {
   background: #0f0;
   color: #000;
   font-weight: bold;
-}
-
+} */
+/* 
 .power-btn {
   margin-top: 30px;
   background: #300;
@@ -82,7 +82,7 @@ body {
 
 .power-btn:hover {
   background: #500;
-}
+} */
 
 .user-profile {
   color: #0f0;
@@ -168,4 +168,121 @@ body {
 
 .comment-action:hover {
   text-decoration: underline;
+}
+
+/* .retro-btn {
+  font-family: monospace;
+  font-size: 12px;
+  border: 1px solid white;
+  background-color: #444;
+  color: white;
+  padding: 6px;
+  text-align: left;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.retro-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+} */
+
+
+
+/* Зеленый экран сверху */
+.channel-indicator {
+  background-color: #3df240;
+  color: #000;
+  font-weight: bold;
+  text-align: center;
+  padding: 4px 0;
+  margin-bottom: 10px;
+  border-radius: 2px;
+  box-shadow: inset 0 0 5px #000;
+  /* height: 100px */
+}
+
+/* Вертикальные прямоугольные кнопки */
+.channel-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  margin-bottom: 12px;
+}
+
+.channel-button {
+  background-color: #888;
+  border: 2px solid #333;
+  color: #fff;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.channel-button:hover {
+  background-color: #aaa;
+}
+
+.channel-button.active {
+  background-color: #fff;
+  color: #000;
+  font-weight: bold;
+}
+
+.channel-button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+/* Кнопки питания */
+.power-buttons {
+  display: flex;
+  gap: 6px;
+  justify-content: center;
+  margin-top: auto;
+}
+
+.power-btn {
+  width: 40px;
+  height: 36px;
+  border: 2px solid #ccc;
+  border-radius: 3px;
+  cursor: pointer;
+  color: white;
+  font-size: 11px;
+  font-family: monospace;
+  transition: all 0.1s ease-in-out;
+  box-shadow: 0 2px #666;
+}
+
+.power-btn:disabled {
+  cursor: default;
+  opacity: 0.9;
+}
+
+/* На вид "вдавленная" кнопка */
+.power-btn.pressed {
+  box-shadow: inset 0 2px 4px #111;
+  transform: translateY(2px);
+}
+
+/* Стили цветов */
+.power-btn.black {
+  background-color: #000;
+  flex: 0.5;
+}
+
+.power-btn.red {
+  background-color: #a00;
+  flex: 0.5;
+}
+
+
+.channel-button.logout {
+  background-color: #a94442;
+}
+
+.channel-button.login {
+  background-color: #337ab7;
 }
